# dnd-bot

./: .dockerignore  .env-sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Pipfile  README.md  bot.py  config-template.ini  docker-compose.yml  fly.toml  helpers.py  mongo_tracker.py  pyproject.toml  tasks.py
.github/workflows/: deploy.yml  run-tests.yml
app/: constants.py  db_client.py  helpers.py  mongo_tracker.py  old_mongo_tracker.py  tasks.py
app/db/: base_db.py  mongo_odm.py  test_mongo_odm.py
app/model/: dao.py
tests/: conftest.py  test_helpers.py  test_mongo_odm.py
