[tool.poetry]
name = "dnd-bot"
version = "1.5.0"
description = "Discord bot to manage D&D groups"
authors = ["Alex Oladele <dragid10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
"discord.py" = "2.1.1"
pymongo = "*"
python-decouple = "*"
pytz = "*"


[tool.poetry.group.dev.dependencies]
flake8 = "*"
mypy = "*"
black = "*"
pre-commit = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
