[tool.poetry]
name = "dnd-bot"
version = "1.5.0"
description = "Discord bot to manage D&D groups"
authors = ["Alex Oladele <dragid10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
"discord.py" = "2.1.1"
mongoengine = "*"
more-itertools = "*"
python = "^3.11"
pymongo = "*"  # Needed specifically to do the ping/status command
python-dateutil = "*"
python-decouple = "*"
pytz = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
mypy = "*"
pre-commit = "*"
ruff = "*"

[tool.poetry.group.test.dependencies]
mongomock = "*"
pytest = "*"
pytest-randomly = "*"

[tool.ruff]
line-length = 120

[tool.ruff.mccabe]
max-complexity = 8

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
